--- a/.github/workflows/dev-to-jekyll.yml
+++ b/.github/workflows/dev-to-jekyll.yml
@@ -1,8 +1,11 @@
 name: Convert DEV Posts to Jekyll Markdown
-on:
- schedule:
+#on:
+ #schedule:
      # At midnight twice a week on Monday and Thursday
-    - cron:  '0 0 * * 1,4'
+  #  - cron:  '0 0 * * 1,4'
+on:
+  issues:
+    types: [opened, edited] 
 jobs:
   dev-to-jekyll:
     runs-on: ubuntu-latest
