--- a/.github/workflows/dev-to-jekyll.yml
+++ b/.github/workflows/dev-to-jekyll.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: dev-to-jekyll
-      uses: benhayehudi/dev-posts-to-jekyll-markdown-action@posts-iterate
+      uses: benhayehudi/dev-posts-to-jekyll-markdown-action@compare-dates
     env:
       GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
       DEV_API_KEY: "${{ secrets.DEV_API_KEY }}"
